--- a/main.html
+++ b/main.html
@@ -3,6 +3,12 @@
 <html>
 
 <head>
+	 <meta charset="UTF-8">
+    <title>Accio Jobs Layout</title>
+</head>
+<body>
+    <h1>Welcome to Accio Jobs!</h1>
+</body>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
